--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.config
+output/
+*.csv
+
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
